backend/config/cleanup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cleanup-manager
spec:
    replicas: 1
    selector:
        matchLabels:
            function: cleanup-manager
    template:
        metadata:
            labels:
                function: cleanup-manager
        spec:
            containers:
              - name: cleanup-manager
                image: 'docker.io/justushibshman/jih_personal:data_cleanup-0.1.4'
                imagePullPolicy: IfNotPresent
                volumeMounts:
                  - name: db-password
                    mountPath: /run/secrets/postgres-password.txt
                    subPath: postgres-password.txt
                    readOnly: true
            imagePullSecrets:
              - name: docker-credentials
            volumes:
              - name: db-password
                secret:
                    secretName: db-password
                    items:
                      - key: postgres-password.txt
                        path: postgres-password.txt
