backend/config/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: database
spec:
    replicas: 1
    selector:
        matchLabels:
            function: database
    template:
        metadata:
            labels:
                function: database
        spec:
            containers:
              - name: pg-database
                image: 'postgres:17.5-alpine3.22'
                imagePullPolicy: IfNotPresent
                volumeMounts:
                  - name: db-volume
                    mountPath: "/var/lib/pgsql"
                    readOnly: false
                  - name: db-password
                    mountPath: /run/secrets/postgres-password.txt
                    subPath: postgres-password.txt
                    readOnly: true
            volumes:
              - name: db-volume
                persistentVolumeClaim:
                    claimName: db-volume-claim
              - name: db-password
                secret:
                    secretName: db-password
                    items:
                      - key: postgres-password.txt
                        path: postgres-password.txt
