backend/config/setup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: setup-server
spec:
    replicas: 1
    selector:
        matchLabels:
            function: setup-server
    template:
        metadata:
            labels:
                function: setup-server
        spec:
            containers:
              - name: setup-server
                image: 'docker.io/justushibshman/jih_personal:setup_server-0.1.10'
                volumeMounts:
                  - name: db-password
                    mountPath: /run/secrets/postgres-password.txt
                    subPath: postgres-password.txt
                    readOnly: true
            imagePullSecrets:
              - name: docker-credentials
            volumes:
              - name: db-password
                secret:
                    secretName: db-password
                    items:
                      - key: postgres-password.txt
                        path: postgres-password.txt
