backend/config/gameplay-service-minikube.yaml
apiVersion: v1
kind: Service
metadata:
    name: gameplay-service
spec:
    type: NodePort
    selector:
        function: gameplay-server
    ports:
      - port: 3333
        targetPort: 3333
        nodePort: 30082
