backend/config/gameplay-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gameplay-service
spec:
    selector:
        function: gameplay-server
    ports:
      - port: 3333
        targetPort: 3333
