backend/config/lobby-service-minikube.yaml
apiVersion: v1
kind: Service
metadata:
    name: lobby-service
spec:
    type: NodePort
    selector:
        function: lobby-server
    ports:
      - port: 1111
        targetPort: 1111
        nodePort: 30081
