backend/config/lobby-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: lobby-service
spec:
    selector:
        function: lobby-server
    ports:
      - port: 1111
        targetPort: 1111
