backend/config/setup-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: setup-service
spec:
    selector:
        function: setup-server
    ports:
      - port: 8080
        targetPort: 8080
