backend/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: backend.playlinegames.net
    http:
      paths:
      - path: /time
        pathType: Prefix
        backend:
          service:
            name: setup-service
            port:
              number: 8080
